@@ -1,2 +1,6 @@
 -Dorg.slf4j.simpleLogger.showDateTime=true
 -Dorg.slf4j.simpleLogger.dateTimeFormat=HH:mm:ss:SSS
+-Xmx2048m
+-XX:+UseConcMarkSweepGC
+-XX:NewRatio=3
+-XX:+HeapDumpOnOutOfMemoryError
